--- a/index.css
+++ b/index.css
@@ -23,23 +23,27 @@ body{
 
 @media (max-width:768px) {
     .container {
-        aspect-ratio: 383/3980;
         display: flex;
         flex-direction: column;
         margin-left: 5.4%;
         margin-right: 5.4%;
+        margin-top: 12.85%;
+        margin-bottom: 12.85%;
+    }
+
+    .about1 {
+        margin-left: 5.4%;
+        margin-right: 5.4%;
+        margin-top: 14.71%;
     }
 
     .about {
-        width: 84%;
         font: 'Times New Roman';
         font-weight: 400;
         font-size: 20px;
         line-height: 23px;
         text-decoration: none;
         color: #000000;
-        margin-top: 35px;
-        margin-left: 33px   ;
     }
 
     .ob {
