--- a/calendar.css
+++ b/calendar.css
@@ -32,10 +32,20 @@ body{
 }
 
 @media (max-width:768px) {
+    .frame {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-left: 5.4%;
+        margin-right: 5.4%;
+        margin-top: 12.85%;
+    }
+
     .about1 {
-        margin-top: 35px;
-        margin-left: 33px;
-        width: 84%;
+        margin-left: 5.4%;
+        margin-right: 5.4%;
+        margin-top: 14.71%;
     }
 
     .video {
@@ -61,43 +71,38 @@ body{
         color: #ffffff;
     }
 
-    .objects {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .object {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .one {
-        margin-top: 10%;
-        margin-bottom: 10%;
+    i {
+        font-style: italic;
     }
 
     .object > img {
-        max-width: 82.5%;
+        max-width: 100%;
     }
 
-    .ob {
-        padding-top: 5px;
+    .object {
+        margin-bottom: 14.4%;
     }
 
-    .one1 > img {
-        max-width: 0;
+    .one-computer {
+        margin: 0;
+        width: 0;
+        height: 0;
     }
 
-    .three1 > img {
-        max-width: 0;
+    .six-computer {
+        margin: 0;
+        width: 0;
+        height: 0;
     }
 
-    .six1 > img {
-        max-width: 0;
+    .three-computer {
+        margin: 0;
+        width: 0;
+        height: 0;
+    }
+
+    .seven {
+        margin: 0;
     }
 }
 
@@ -115,6 +120,7 @@ body{
     .video {
         margin-left: 20px;
         padding-bottom: 24px;
+        margin-bottom: 4.43%;
     }
 
     .about1 {
