--- a/kebabs.css
+++ b/kebabs.css
@@ -32,10 +32,21 @@ body{
 }
 
 @media (max-width:768px) {
+    .frame {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-left: 5.4%;
+        margin-right: 5.4%;
+        margin-top: 12.85%;
+        margin-bottom: 12.85%;
+    }
+    
     .about1 {
-        margin-top: 35px;
-        margin-left: 33px;
-        width: 84%;
+        margin-left: 5.4%;
+        margin-right: 5.4%;
+        margin-top: 14.71%;
     }
 
     .about {
@@ -54,16 +65,6 @@ body{
         line-height: 23px;
         text-decoration: none;
         color: #ffffff;
-    }
-
-    .objects {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 10%;
-        margin-top: 10%;
     }
 
     .object {
