--- a/posters.css
+++ b/posters.css
@@ -56,7 +56,7 @@ body{
     .about {
         font: 'Times New Roman';
         font-weight: 400;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 23px;
         text-decoration: none;
         color: #ffffff;
@@ -65,7 +65,7 @@ body{
     .download {
         font: 'Times New Roman';
         font-weight: 400;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 23px;
         text-decoration: none;
         color: #ffffff;
@@ -99,6 +99,8 @@ body{
     .ten, .eleven, .twelve, .thirteen {
         width: 49.5%;
     }
+
+    .
 }
 
 @media (min-width:769px) {
