--- a/sital.css
+++ b/sital.css
@@ -49,7 +49,7 @@ body{
     .about {
         font: 'Times New Roman';
         font-weight: 400;
-        font-size: 19px;
+        font-size: 18px;
         line-height: 23px;
         text-decoration: none;
         color: #000000;
@@ -58,7 +58,7 @@ body{
     .download {
         font: 'Times New Roman';
         font-weight: 400;
-        font-size: 19px;
+        font-size: 18px;
         line-height: 23px;
         text-decoration: none;
         color: #000000;
@@ -68,17 +68,19 @@ body{
         max-width: 100%;
     }
 
+    .object {
+        margin-bottom: 15%;
+    }
+
     .one-two {
         display: flex;
         flex-direction: column;
         width: 100%;
-        margin-bottom: 10%;
     }
 
     .one {
         width: 96%;
         margin-left: 1.6%;
-        margin-bottom: 10%;
     }
 
     .two {
@@ -89,29 +91,27 @@ body{
     .three {
         width: 93%;
         margin-left: 3.1%;
-        margin-bottom: 10%;
     }
 
     .four-mobile {
         width: 96.9%;
         margin-left: 1.3%;
-        margin-bottom: 10%;
     }
 
     .four-computer {
         width: 0;
+        height: 0;
+        margin: 0;
     }
 
     .five {
         width: 93.2%;
         margin-left: 3.4%;
-        margin-bottom: 10%;
     }
 
     .six {
         width: 94.8%;
         margin-left: 2.6%;
-        margin-bottom: 10%;
     }
 }
 
