--- a/game-diagrams.css
+++ b/game-diagrams.css
@@ -74,6 +74,10 @@ body{
     .object > img {
         max-width: 100%;
     }
+
+    .object {
+        margin-top: -1%;
+    }
 }
 
 @media (min-width:769px) {
