--- a/illustrations.css
+++ b/illustrations.css
@@ -78,6 +78,14 @@ body{
         width: 56.8%;
         margin-left: 10%;
     }
+
+    .four {
+        margin-left: 5.7%;
+    }
+
+    .six {
+        margin-bottom: 10%;
+    }
 }
 
 @media (min-width:769px) {
@@ -160,14 +168,14 @@ body{
         flex-direction: row;
     }
 
-    .eight {
+    .seven {
         position: absolute;
         top: 57.7%;
         left: 3.3%;
         width: 39.3%;
     }
 
-    .seven {
+    .eight {
         position: absolute;
         top: 71.6%;
         left: 49.4%;
