--- a/illustrations.css
+++ b/illustrations.css
@@ -79,6 +79,10 @@ body{
         margin-left: 10%;
     }
 
+    .three {
+        margin-bottom: 3%;
+    }
+
     .four {
         margin-left: 5.7%;
     }
